Updated visuals to be easier on the eyes and more consistent. Fixed some bugs. Decided to forego checkmate functions, as they proved to be too much for the time I have remaining. There is still a win condition if the king is taken, and the player is notified if the king is in check. Once a king is taken, the board can no longer be interacted with until a page refresh or a reset button click.

--- a/public/style.css
+++ b/public/style.css
@@ -6,48 +6,73 @@ html{
     display: none;
 }
 
+footer{
+    position: fixed;
+    bottom: 0;
+}
+
+.sidebar{
+    width: 20vmin;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-top: 20px;
+}
+
+.playerturn{
+    font-size: 4vmin;
+}
+
 #whitetaken{
     color: black;
     background-color: white;
-    font-size: xx-large;
+    font-family: 'Gilda Display', serif;
+    font-size: 1vmin;
 }
 
 #blacktaken{
     color: white;
     background-color: black;
-    font-size: xx-large;
+    font-family: 'Gilda Display', serif;
+    font-size: 1vmin;
 }
 
 mark.black{
     color: white;
     background-color: black;
-    font-size: xx-large;
+    font-family: 'Gilda Display', serif;
+    font-size: 6vmin;
+    pointer-events: none;
 }
 
 mark.white{
     color: black;
     background-color: white;
-    font-size: xx-large;
+    font-family: 'Gilda Display', serif;
+    font-size: 6vmin;
+    pointer-events: none;
 }
 
 .Board {
     display: grid;
+    margin-left: 20vmin;
+    top: 8vmin;
     gap: 0px;
     grid-template-columns: repeat(8, 1fr);
-    grid-auto-rows: 10vmin;
-    grid-auto-columns: 10vmin; 
-    width: 75vmin;
+    grid-auto-rows: 9vmin;
+    grid-auto-columns: 9vmin; 
+    width: 72vmin;
 }
 
 .Bl {
-    background-color: black;
+    background-color: rgb(29, 15, 15);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .W {
-    background-color: white;
+    background-color: rgb(216, 202, 182);
     display: flex;
     justify-content: center;
     align-items: center;
